[gd_scene load_steps=3 format=3 uid="uid://bc403ub83m53o"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_3n0m8"]
[ext_resource type="Texture2D" uid="uid://c7cupffibwqax" path="res://textures/ui/singleplayer.png" id="2_714fg"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3n0m8")

[node name="DefaultMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="DefaultMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -98.0
offset_right = 98.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 32
text = "FLAPPY BIRD"

[node name="CenterContainer" type="CenterContainer" parent="DefaultMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="DefaultMenu/CenterContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="DefaultMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "PLAY"

[node name="ExitButton" type="Button" parent="DefaultMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "EXIT"

[node name="PlayMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="PlayMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -98.0
offset_right = 98.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 28
text = "CHOOSE GAME MODE"

[node name="CenterContainer" type="CenterContainer" parent="PlayMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -54.0
offset_right = 160.0
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PlayMenu/CenterContainer"]
layout_mode = 2

[node name="SoloGame" type="Button" parent="PlayMenu/CenterContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("2_714fg")

[node name="BackButton" type="Button" parent="PlayMenu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
text = "BACK"

[node name="SoloProfileMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="SoloProfileMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -56.0
offset_right = 56.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 28
text = "PROFILE"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="SoloProfileMenu"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -40.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SoloProfileMenu/CenterContainer"]
layout_mode = 2

[node name="ProfileSelector" type="OptionButton" parent="SoloProfileMenu/CenterContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="BackButton" type="Button" parent="SoloProfileMenu"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 50.0
grow_vertical = 0
text = "BACK"

[node name="PlayButton" type="Button" parent="SoloProfileMenu"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -47.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
text = "PLAY"

[connection signal="pressed" from="DefaultMenu/CenterContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="DefaultMenu/CenterContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="PlayMenu/CenterContainer/HBoxContainer/SoloGame" to="." method="_on_solo_game_pressed"]
[connection signal="pressed" from="PlayMenu/BackButton" to="." method="_on_play_menu_back_button_pressed"]
[connection signal="pressed" from="SoloProfileMenu/BackButton" to="." method="_on_solo_profile_back_button_pressed"]
[connection signal="pressed" from="SoloProfileMenu/PlayButton" to="." method="_on_solo_game_play_button_pressed"]
